# tpch-dbgen

./: .gitignore  CMakeLists.txt  README.md  generate_tpch.sh
include/: data_loader.hpp  data_manager.hpp  thread_pool.hpp
src/: data_loader.cpp  data_manager.cpp  main.cpp  thread_pool.cpp
utils/: split_lines.cpp
